--- a/src/container.css
+++ b/src/container.css
@@ -1,6 +1,7 @@
 .container-child {
-  border: solid black;
-  border-radius: 5px;
+  background-color: white;
+  border: solid white;
+  border-radius: 8px;
   min-height: 230px;
   width: 600px;
 }
@@ -8,7 +9,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  padding: 25px;
+  padding: 10px;
 }
 .autor {
   margin-right: 20px;
@@ -22,4 +23,13 @@
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 10px;
+}
+.icon {
+  margin: 10px;
+  padding: 5px;
+}
+.icon-twi {
+  border-radius: 10px;
+  color: black;
+  padding: 12px;
 }
